# Tryangle-Android

./: .gitignore  README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/gomson/tryangle/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: hough.cpp  image_retrieval.cpp
app/src/main/java/com/gomson/tryangle/: AutoFitTextureView.kt  CameraView.kt  ComponentMatcher.kt  Constants.kt  GridLinesView.kt  Guide.kt  Guider.kt  Hough.kt  ImageAnalyzer.kt  ImageSegmentationModelExecutor.kt  ImageService.kt  Layer.kt  Layout.kt  MLExecutionViewModel.kt  MainActivity.kt  MatchFeature.kt  ModelExecutionResult.kt  NetworkManager.kt  PhotoDownloadManager.kt  PoseClass.kt  PoseClassifier.kt  PoseEstimator.kt  PreferenceActivity.kt  PreferenceFragment.kt  SplashActivity.kt  SplashFragment.kt  TokenManager.kt  TryangleApplication.kt  Util.kt  YuvToRgbConverter.kt
app/src/main/java/com/gomson/tryangle/album/: AlbumActivity.kt  AlbumAdapter.kt  Bucket.kt  BucketAdapter.kt  DeviceAlbum.kt
app/src/main/java/com/gomson/tryangle/camera/: CameraManager.kt
app/src/main/java/com/gomson/tryangle/deserializer/: AccessTokenDeserializer.kt  MaskListDeserializer.kt
app/src/main/java/com/gomson/tryangle/domain/: AccessToken.java  Area.kt  Component.java  Guide.java  GuideTabItem.kt  Image.java  Line.kt  LineComponent.java  LineGuide.java  ObjectComponent.java  ObjectComponentImage.kt  ObjectGuide.java  PersonComponent.java  Point.kt  Roi.kt  Spot.java
app/src/main/java/com/gomson/tryangle/domain/component/: Component.java  ComponentList.kt  LineComponent.java  ObjectComponent.java  PersonComponent.java
app/src/main/java/com/gomson/tryangle/domain/guide/: Convertable.kt  Guide.java  Guides.kt  Layer.kt  LayerLayoutGuideManager.kt  LineGuide.java  ObjectGuide.java
app/src/main/java/com/gomson/tryangle/dto/: GuideDTO.java  GuideImageListDTO.java  MaskList.kt  MatchingResult.kt  ObjectComponentListDTO.kt
app/src/main/java/com/gomson/tryangle/guider/: GuideImageObjectGuider.kt  Guider.kt  Guiders.kt  Guides.kt  LineGuider.kt  ObjectGuider.kt  PoseGuider.kt
app/src/main/java/com/gomson/tryangle/network/: AccessTokenRetrofitService.kt  BaseService.kt  ImageRetrofitService.kt  ImageService.kt  ModelRetrofitService.kt  NetworkManager.kt  modelService.kt
app/src/main/java/com/gomson/tryangle/photo/: CropAdapter.kt  CropImageView.kt  PhotoActivity.kt  ProgressWheelView.kt
app/src/main/java/com/gomson/tryangle/pose/: PoseClass.kt  PoseClassifier.kt  PoseEstimator.kt
app/src/main/java/com/gomson/tryangle/setting/: PreferenceActivity.kt  PreferenceFragment.kt
app/src/main/java/com/gomson/tryangle/view/: GuideImageCategoryTabLayout.kt  LayerLayout.kt
app/src/main/java/com/gomson/tryangle/view/guide_image_view/: GuideImageAdapter.kt  (+1 more)
app/src/main/res/animator/: thumb_up.xml
app/src/main/res/drawable/: popup_background.xml  selector_flash.xml  selector_grid.xml  shoot_circle.xml  splash.xml
app/src/main/res/layout/: activity_album.xml  activity_login.xml  activity_main.xml  activity_photo.xml  activity_photo_crop.xml  activity_preference.xml  activity_splash.xml  fragment_crop.xml  fragment_splash.xml  item_album.xml  item_bucket.xml  item_crop.xml  item_guide_image.xml  popup_more.xml  popup_ratio.xml  preferences_category.xml  view_camera.xml  view_guide_image_category_tab_layout.xml  view_guide_image_list.xml  view_recyclerview.xml
app/src/main/res/values/: colors.xml  ic_launcher_background.xml  strings.xml  styles.xml
app/src/main/res/xml/: preferences.xml
app/src/test/java/com/gomson/tryangle/: ExampleUnitTest.kt
(+31 files in other folders)
